[tool.poetry]
name = "montag"
version = "0.1.0"
description = "Discord bot for the Project BRADBURY server"
authors = ["Nekosis <37462865+Nekosis@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nextcord = "^2.6.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
